--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   </head>
 
-  <body data-new-gr-c-s-check-loaded="14.1261.0" data-gr-ext-installed="">
+  <body class="js-proxy-blur" data-new-gr-c-s-check-loaded="14.1261.0" data-gr-ext-installed="">
 
 
 <input class="nav-active" id="nav-active" type="checkbox">
@@ -289,8 +289,22 @@
 
 </main>
 
-  
-
+<style>.js-proxy-blur {filter: blur(5px);}</style>
+<script src="https://website-translator.app.crowdin.net/assets/proxy-translator.js"></script>
+<script>
+  window.proxyTranslator.init({
+    baseUrl: "https://petramazavac.github.io/writebooknovi/",
+    distribution: "0e06bca31eab2b71c17565a7hjo",
+    defaultLanguage: "en",
+    defaultLanguageTitle: "English",
+    showDefaultLanguageInUrl: false,
+    languageRoutingMethod: "query",
+    position: "bottom-right",
+    submenuPosition: "top-right",
+    poweredBy: true,
+    token: "U2FsdGVkX1+wgTeTywp9uvTKN9KG3Wj6GgX9p5VXA+327c4v90FbNORFpX9e3AS+/1twBUFWw8nYyJ5dPmeWSfkvluj2btM2h6Yeq1MZPHH8FXAxak16+gZPjmTzcfd8rwIiAUA46TV49h8VAeg2eAmiagAUf0WK9d4/tNUamv8=",
+  });
+</script>  
 
 
 </body><grammarly-desktop-integration data-grammarly-shadow-root="true"><template shadowrootmode="open"><style>
